--- a/src/layouts/Layout.css
+++ b/src/layouts/Layout.css
@@ -1,4 +1,6 @@
 .main{
     margin-left: var(--root-width-sidebar);
     padding: 20px;
+    background: var(--root-color-white);
+    min-height: 100vh;
 }
